; ModuleID = '/home/carl/AnghaBench/libgit2/tests/object/extr_message.c_assert_message_prettifying.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/object/extr_message.c_assert_message_prettifying.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_BUF_INIT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i32)* @assert_message_prettifying to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @assert_message_prettifying(i8* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* @GIT_BUF_INIT, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i8*, i8** %5, align 8
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @git_message_prettify(i32* %7, i8* %9, i32 %10, i8 signext 35)
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @git_buf_cstr(i32* %7)
  %14 = call i32 @cl_assert_equal_s(i8* %12, i32 %13)
  %15 = call i32 @git_buf_dispose(i32* %7)
  ret void
}

declare dso_local i32 @git_message_prettify(i32*, i8*, i32, i8 signext) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_buf_cstr(i32*) #1

declare dso_local i32 @git_buf_dispose(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
